# drf-api-permissions

./: README.md  pyproject.toml  requirements.txt
journal/: models.py  serializer.py  tests.py  urls.py  views.py
project_config/: asgi.py  settings.py  urls.py  wsgi.py
